--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 5897,
+    "id" : "https://sarasrking.github.io/My IIIF project/images/cESHdKSU/canvas/",
+    "label" : {
+      "none" : [ "cESHdKSU" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://sarasrking.github.io/My IIIF project/images/cESHdKSU/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://sarasrking.github.io/My IIIF project/images/cESHdKSU/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 185,
+              "height" : 120
+            }, {
+              "width" : 369,
+              "height" : 240
+            }, {
+              "width" : 738,
+              "height" : 479
+            }, {
+              "width" : 1475,
+              "height" : 958
+            }, {
+              "width" : 2949,
+              "height" : 1915
+            }, {
+              "width" : 5897,
+              "height" : 3830
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 5897,
+            "@id" : "https://sarasrking.github.io/My IIIF project/images/cESHdKSU",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 3830
+          } ],
+          "format" : "image/jpeg",
+          "width" : 5897,
+          "id" : "https://sarasrking.github.io/My IIIF project/images/cESHdKSU/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 3830
+        },
+        "target" : "https://sarasrking.github.io/My IIIF project/images/cESHdKSU/canvas/"
+      } ]
+    } ],
+    "height" : 3830
+  }, {
     "width" : 1047,
     "id" : "https://sarasrking.github.io/My IIIF project/images/henry_king_fob_watch/canvas/",
     "label" : {
