--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 1599,
+    "id" : "https://sarasrking.github.io/My IIIF project/images/Butterfly/canvas/",
+    "label" : {
+      "none" : [ "Butterfly" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://sarasrking.github.io/My IIIF project/images/Butterfly/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://sarasrking.github.io/My IIIF project/images/Butterfly/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 50,
+              "height" : 36
+            }, {
+              "width" : 100,
+              "height" : 72
+            }, {
+              "width" : 200,
+              "height" : 143
+            }, {
+              "width" : 400,
+              "height" : 286
+            }, {
+              "width" : 800,
+              "height" : 571
+            }, {
+              "width" : 1599,
+              "height" : 1142
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 1599,
+            "@id" : "https://sarasrking.github.io/My IIIF project/images/Butterfly",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 1142
+          } ],
+          "format" : "image/jpeg",
+          "width" : 1599,
+          "id" : "https://sarasrking.github.io/My IIIF project/images/Butterfly/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 1142
+        },
+        "target" : "https://sarasrking.github.io/My IIIF project/images/Butterfly/canvas/"
+      } ]
+    } ],
+    "height" : 1142
+  }, {
     "width" : 5897,
     "id" : "https://sarasrking.github.io/My IIIF project/images/cESHdKSU/canvas/",
     "label" : {
