--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 6991,
+    "id" : "https://sarasrking.github.io/My IIIF project/images/Urchin/canvas/",
+    "label" : {
+      "none" : [ "Urchin" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://sarasrking.github.io/My IIIF project/images/Urchin/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://sarasrking.github.io/My IIIF project/images/Urchin/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 219,
+              "height" : 148
+            }, {
+              "width" : 437,
+              "height" : 295
+            }, {
+              "width" : 874,
+              "height" : 590
+            }, {
+              "width" : 1748,
+              "height" : 1179
+            }, {
+              "width" : 3496,
+              "height" : 2358
+            }, {
+              "width" : 6991,
+              "height" : 4715
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 6991,
+            "@id" : "https://sarasrking.github.io/My IIIF project/images/Urchin",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 4715
+          } ],
+          "format" : "image/jpeg",
+          "width" : 6991,
+          "id" : "https://sarasrking.github.io/My IIIF project/images/Urchin/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 4715
+        },
+        "target" : "https://sarasrking.github.io/My IIIF project/images/Urchin/canvas/"
+      } ]
+    } ],
+    "height" : 4715
+  }, {
     "width" : 1599,
     "id" : "https://sarasrking.github.io/My IIIF project/images/Butterfly/canvas/",
     "label" : {
