--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 5000,
+    "id" : "https://sarasrking.github.io/My IIIF project/images/Bee/canvas/",
+    "label" : {
+      "none" : [ "Bee" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://sarasrking.github.io/My IIIF project/images/Bee/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://sarasrking.github.io/My IIIF project/images/Bee/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 157,
+              "height" : 105
+            }, {
+              "width" : 313,
+              "height" : 209
+            }, {
+              "width" : 625,
+              "height" : 417
+            }, {
+              "width" : 1250,
+              "height" : 834
+            }, {
+              "width" : 2500,
+              "height" : 1667
+            }, {
+              "width" : 5000,
+              "height" : 3333
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 5000,
+            "@id" : "https://sarasrking.github.io/My IIIF project/images/Bee",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 3333
+          } ],
+          "format" : "image/jpeg",
+          "width" : 5000,
+          "id" : "https://sarasrking.github.io/My IIIF project/images/Bee/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 3333
+        },
+        "target" : "https://sarasrking.github.io/My IIIF project/images/Bee/canvas/"
+      } ]
+    } ],
+    "height" : 3333
+  }, {
     "width" : 6991,
     "id" : "https://sarasrking.github.io/My IIIF project/images/Urchin/canvas/",
     "label" : {
